--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -63,7 +63,7 @@
     padding: 2px 6px;
     border-radius: 50%;
     position:absolute;
-    left:16px;
+    left:12px;
     top:-10px;
 
 }
@@ -123,12 +123,18 @@
         position: relative;
     }
     .middle-icons{
-        background-color: blue;
-        height: 45px;
+        width:100%;
+        padding: 0 3%;
+        justify-content: space-around;
+        height: 46px;
         position:fixed;
         bottom: 0;
         align-items: flex-end;
         background-color: #ffffff ;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px 2px;
+    }
+    .middle-icon{
+        height: 30px;
+        width: 30px;
     }
   }
