--- a/src/components/section/Rightbar.css
+++ b/src/components/section/Rightbar.css
@@ -1,3 +1,117 @@
 .right-container{
-    width: 25%;
+    width: 20%;
+    color: #585860a3;
+}
+.add-container-one{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin: 5% 0;
+}
+.add-container-two{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+.add-img-one{
+    width: 100px;
+    height: 60px;
+    border-radius: 10%;
+    object-fit: cover;
+}
+.add-img-two{
+    width: 100px;
+    height: 80px;
+    border-radius: 10%;
+
+}
+.para-one{
+    font-size: 15px;
+    font-weight: 500;
+    color: black;
+}
+.para-two{
+    font-size: 12px;
+
+}
+.hr-line{
+    margin: 5% 0;
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.237);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.156);
+}
+.page-dot{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.page-dot a{
+    text-decoration: none;
+    color: #585860a3 ;
+}
+.page-image{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.pages{
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    margin: 5% 0;
+}
+.pages span{
+    color: black;
+    font-size: 16px;
+    font-weight: 500;
+}
+.pages p{
+    font-size: 12px;
+
+}
+.notification{
+    width: 30px;
+    height: 20px;
+}
+.contact{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+}
+.contact p{
+    flex: 1;
+}
+.contact-icon{
+    margin: 0 5px;
+    height: 15px;
+    width: 15px;
+    cursor: pointer;
+    color: #000000a3;
+}
+.contact-list{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 5%;
+}
+.contact-list span{
+    color: black;
+    font-weight: 500;
+}
+.contact-img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+
+}
+/* media query */
+
+@media screen and (max-width: 600px){
+    .right-container{
+        display: none;
+    }
 }
