--- a/src/components/section/Leftbar.css
+++ b/src/components/section/Leftbar.css
@@ -1,5 +1,41 @@
 .left-container{
-    width: 25%;
-    background-color: chartreuse;
-    text-align: center;
+    width: 18%;
+    padding: 0 2%;
+    background-color: #f0f2f5;
+    display: flex;
+    flex-direction: column;
+}
+.profile-name{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 5px;
+    width: 100%;
+    font-weight: 500;
+    margin-bottom: 2%;
+}
+.profile-image{
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+}
+.icon-block{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 3%;
+    font-weight: 500;
+}
+.icons{
+    height: 35px;
+    width: 40px;
+    color: #4064ac;
+}
+/* media query */
+
+@media screen and (max-width: 600px){
+    .left-container{
+        display: none;
+    }
 }
