--- a/src/components/section/Main.css
+++ b/src/components/section/Main.css
@@ -1,6 +1,5 @@
 .main-container{
-    margin-top: 1.5%;
+    margin-top: 1.3%;
     display: flex;
-    background-color: blue;
-    text-align: center;
+    gap: 5%;
 }
